objects/HealthCloudGA__RiskScoreAgeBandNewEnrollee__mdt.object
<CustomObject>
    <description>Lookup table with scores for Age bands for new enrollees</description>
    <fields>
        <fullName>HealthCloudGA__AgeBandFrom__c</fullName>
        <label>Age Band From</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__AgeBandTo__c</fullName>
        <label>Age Band To</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__CSNP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CSNP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__Gender__c</fullName>
        <label>Gender</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                    <default>true</default>
                    <label>Male</label>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>HealthCloudGA__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether this record should be used.</description>
        <inlineHelpText>Whether this record should be used.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicaidNonOriginallyDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Medicaid Non-Originally Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__MedicaidOriginallyDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Medicaid Originally Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NonMedicaidNonOriginallyDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Medicaid Non-Originally Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__NonMedicaidOriginallyDisabled__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Non-Medicaid Originally Disabled</label>
        <precision>6</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HealthCloudGA__YearSpan__c</fullName>
        <label>Year Span</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Risk Score Age Band New Enrollee</label>
    <pluralLabel>Risk Score Age Band New Enrollees</pluralLabel>
</CustomObject>